implement enhanced filter and caching